--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,6 @@ jobs:
         node-version: [19.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    environment: .env
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,6 +26,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Create .env file
+      uses: SpicyPizza/create-envfile@v1.3.0
+      with:
+        envkey_TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
+        envkey_BITLY_API_TOKEN: ${{ secrets.BITLY_API_TOKEN }}
     - run: npm ci
     - run: npm run build --if-present
 #    - run: npm test
