--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,22 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Create .env file
-      uses: SpicyPizza/create-envfile@v1.3.0
-      with:
-        envkey_TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
-        envkey_BITLY_API_TOKEN: ${{ secrets.BITLY_API_TOKEN }}
+      env:
+        TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
+        BITLY_API_TOKEN: ${{ secrets.BITLY_API_TOKEN }}
+      run: |
+        touch .env
+        echo TMDB_API_KEY="$TMDB_API_KEY" >> .env
+        echo BITLY_API_TOKEN="$BITLY_API_TOKEN" >> .env
+        
+        echo "cat .env"
+        cat .env
+        
+        echo "ls -a ."
+        ls -a .
+        
+        echo "ls -a ${{ github.workspace }}"
+        ls -a ${{ github.workspace }}
     - run: npm ci
     - run: npm run build --if-present
 #    - run: npm test
