--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,15 +34,9 @@ jobs:
         touch .env
         echo TMDB_API_KEY="$TMDB_API_KEY" >> .env
         echo BITLY_API_TOKEN="$BITLY_API_TOKEN" >> .env
-        
-        echo "cat .env"
-        cat .env
-        
-        echo "ls -a ."
-        ls -a .
-        
-        echo "ls -a ${{ github.workspace }}"
-        ls -a ${{ github.workspace }}
+      shell: bash
     - run: npm ci
     - run: npm run build --if-present
 #    - run: npm test
+    - run: rm .env
+      shell: bash
