Revert "Update node.js.yml"
This reverts commit 2534328e0d0e060c98e1a51fe170727f57451396.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,9 +34,15 @@ jobs:
         touch .env
         echo TMDB_API_KEY="$TMDB_API_KEY" >> .env
         echo BITLY_API_TOKEN="$BITLY_API_TOKEN" >> .env
-      shell: bash
+        
+        echo "cat .env"
+        cat .env
+        
+        echo "ls -a ."
+        ls -a .
+        
+        echo "ls -a ${{ github.workspace }}"
+        ls -a ${{ github.workspace }}
     - run: npm ci
     - run: npm run build --if-present
 #    - run: npm test
-    - run: rm .env
-      shell: bash
